--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/kmk010.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/kmk010.a.main.css
@@ -63,6 +63,7 @@
 
 .overtimeSettingDetail {
 	margin-top: 20px;
+	width: 100%;
 }
 
 .overtimeDetail {
@@ -209,4 +210,9 @@
 }
 #functions-area {
 	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-box;
+	display: box;}
+.fixed-flex-layout-left {
+	width: 100%;
 }
