fix bug kmk010 ver.3

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/kmk010.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/010/a/kmk010.a.main.css
@@ -209,10 +209,8 @@
 	float: left;
 }
 #functions-area {
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-box;
-	display: box;}
+	display: flex;
+}
 .fixed-flex-layout-left {
 	width: 100%;
 }
