update ui kaf022

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/c.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/c.xhtml
@@ -183,10 +183,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c18">#{i18n.getText('KAF022_161')}</td>
+			<td class="color-header" id="c18"><div data-bind="ntsFormLabel: { constraint: 'ObstacleName',inline:true}">#{i18n.getText('KAF022_161')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorC41">
 					<input tabindex="15" data-bind="ntsTextEditor: {
+					    name:'#{i18n.getText('KAF022_161')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -198,10 +199,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c19">#{i18n.getText('KAF022_162')}</td>
+			<td class="color-header" id="c19"><div data-bind="ntsFormLabel: { constraint: 'ObstacleName',inline:true}">#{i18n.getText('KAF022_162')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorC42">
 					<input tabindex="16" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_162')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -213,10 +215,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c20">#{i18n.getText('KAF022_163')}</td>
+			<td class="color-header" id="c20"><div data-bind="ntsFormLabel: { constraint: 'ObstacleName',inline:true}">#{i18n.getText('KAF022_163')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorC43">
 					<input tabindex="17" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_163')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -228,10 +231,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c21">#{i18n.getText('KAF022_164')}</td>
+			<td class="color-header" id="c21"><div data-bind="ntsFormLabel: { constraint: 'ObstacleName',inline:true}">#{i18n.getText('KAF022_164')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorC44">
 					<input tabindex="18" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_164')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -243,10 +247,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c22">#{i18n.getText('KAF022_165')}</td>
+			<td class="color-header" id="c22"><div data-bind="ntsFormLabel: { constraint: 'ObstacleName',inline:true}">#{i18n.getText('KAF022_165')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorC45">
 					<input tabindex="19" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_165')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -258,10 +263,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c23">#{i18n.getText('KAF022_166')}</td>
+			<td class="color-header" id="c23"><div data-bind="ntsFormLabel: { constraint: 'ObstacleName',inline:true}">#{i18n.getText('KAF022_166')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorC46">
 					<input tabindex="20" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_166')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -273,10 +279,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c24">#{i18n.getText('KAF022_167')}</td>
+			<td class="color-header" id="c24"><div data-bind="ntsFormLabel: { constraint: 'ObstacleName',inline:true}">#{i18n.getText('KAF022_167')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorC47">
 					<input tabindex="21" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_167')}',
 						value: value,
 						constraint: constraint,
 						option: option,
@@ -288,10 +295,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c50">#{i18n.getText('KAF022_364')}</td>
+			<td class="color-header" id="c50"><div data-bind="ntsFormLabel: { constraint: 'ObstacleName',inline:true}">#{i18n.getText('KAF022_364')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorC51">
 					<input tabindex="22" data-bind="ntsTextEditor: {
+						name:'#{i18n.getText('KAF022_364')}',
 						value: value,
 						constraint: constraint,
 						option: option,
