--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/d.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/d.xhtml
@@ -23,7 +23,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="d4">#{i18n.getText('KAF022_179')}</td>
+			<td class="color-header" id="d4"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_179')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorD9">
 					<input tabindex="2" data-bind="ntsTextEditor: {
@@ -41,7 +41,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="d5">#{i18n.getText('KAF022_180')}</td>
+			<td class="color-header" id="d5"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_180')}</div></td>
 			<td>
 				<div data-bind="with: texteditorD12">
 					<input  tabindex="5" data-bind="ntsTextEditor: {
