--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/k.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/k.xhtml
@@ -75,7 +75,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="k8">#{i18n.getText('KAF022_265')}</td>
+			<td class="color-header" id="k8"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_265')}</div></td>
 			<td>
 				<div data-bind="with: texteditorK17">
 					<input tabindex="6"
@@ -95,7 +95,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="k9">#{i18n.getText('KAF022_266')}</td>
+			<td class="color-header" id="k9"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_266')}</div></td>
 			<td>
 				<div data-bind="with: texteditorK20">
 					<input tabindex="9"
