--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/e.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/e.xhtml
@@ -79,7 +79,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="e7">#{i18n.getText('KAF022_179')}</td>
+			<td class="color-header" id="e7"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_179')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorE13">
 					<input tabindex="5" data-bind="ntsTextEditor: {
@@ -96,7 +96,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="e8">#{i18n.getText('KAF022_180')}</td>
+			<td class="color-header" id="e8"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_180')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorE16">
 					<input tabindex="8" data-bind="ntsTextEditor: {
