--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/f.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/f.xhtml
@@ -91,7 +91,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="f8">#{i18n.getText('KAF022_179')}</td>
+			<td class="color-header" id="f8"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_179')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorF15">
 					<input tabindex="7" data-bind="ntsTextEditor: {
@@ -108,7 +108,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="f9">#{i18n.getText('KAF022_180')}</td>
+			<td class="color-header" id="f9"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_180')}</div></td>
 			<td>
 				<div  data-bind="with: texteditorF16">
 					<input tabindex="10" data-bind="ntsTextEditor: {
