--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/j.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/j.xhtml
@@ -168,7 +168,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="j16">#{i18n.getText('KAF022_256')}</td>
+			<td class="color-header" id="j16"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_256')}</div></td>
 			<td>
 				<div data-bind="with: texteditorJ29">
 					<input tabindex="12"
@@ -188,7 +188,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="j17">#{i18n.getText('KAF022_257')}</td>
+			<td class="color-header" id="j17"><div data-bind="ntsFormLabel: { constraint: 'Comment',inline:true}">#{i18n.getText('KAF022_257')}</div></td>
 			<td>
 				<div data-bind="with: texteditorJ32">
 					<input tabindex="15"
