update kaf022 ui A15

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -834,7 +834,7 @@
 													options: $parent.itemListA15_4,
 													optionsValue: 'code',
 													optionsText: 'name',
-													value: selectedId,
+													value: searchSetFlg,
 													enable: true}, 
 													attr:{
 														tabindex:226 + $index()
