--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
@@ -23,7 +23,7 @@
 		<ui:define name="content">
 			<div id="functions-area">
 				<!-- A1_1: Button 承認 -->
-				<button>#{i18n.getText('CMM045_3')}</button>
+				<button data-bind = "click: approval">#{i18n.getText('CMM045_3')}</button>
 				<!-- A1_2: Button 印刷 -->
 				<button>#{i18n.getText('CMM045_4')}</button>
 			</div>
