update kaf022 a16 - input to textarea

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -882,14 +882,14 @@
 										<td  class="color-header" id="a16_3"><div data-bind="ntsFormLabel: { constraint: 'Content',inline:true}">#{i18n.getText('KAF022_112')}</div></td>
 										<td>
 											<div tabindex="238" data-bind="with: texteditorA16_8">
-												<input data-bind="ntsTextEditor: {
+												<textarea data-bind="ntsTextEditor: {
 												    name:'#{i18n.getText('KAF022_112')}',
 													value: value,
 													constraint: constraint,
 													option: option,
 													required: required,
 													enable: enable,
-													readonly: readonly}" />
+													readonly: readonly}" ></textarea>
 											</div>
 										</td>
 									</tr>
@@ -912,14 +912,14 @@
 										<td class="color-header" id="a16_5"><div data-bind="ntsFormLabel: { constraint: 'Content',inline:true}">#{i18n.getText('KAF022_114')}</div></td>
 										<td>
 											<div tabindex="240" data-bind="with: texteditorA16_10">
-												<input data-bind="ntsTextEditor: {
+												<textarea data-bind="ntsTextEditor: {
 													name:'#{i18n.getText('KAF022_114')}',
 													value: value,
 													constraint: constraint,
 													option: option,
 													required: required,
 													enable: enable,
-													readonly: readonly}" />
+													readonly: readonly}" ></textarea>
 											</div>
 										</td>
 									</tr>
@@ -927,14 +927,14 @@
 										<td class="color-header" id="a16_6"><div data-bind="ntsFormLabel: { constraint: 'Subject',inline:true}">#{i18n.getText('KAF022_116')}</div></td>
 										<td>
 											<div tabindex="241" data-bind="with: texteditorA16_11">
-												<input data-bind="ntsTextEditor: {
+												<textarea data-bind="ntsTextEditor: {
 													name:'#{i18n.getText('KAF022_116')}',
 													value: value,
 													constraint: constraint,
 													option: option,
 													required: required,
 													enable: enable,
-													readonly: readonly}" />
+													readonly: readonly}" ></textarea>
 											</div>
 										</td>
 									</tr>
