--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -74,7 +74,7 @@
 				</div>
 			</div>
 			<div data-bind="if: !screenModeNew()" style="display: inline-block;">
-				<span class="label fix-margin-left" data-bind="text: prePostSelected()==0 ? '#{i18n.getText('KAF009_9')}' : '#{i18n.getText('KAF009_10')}'"></span>
+				<span class="label fix-margin-left-kaf005" data-bind="text: prePostSelected()==0 ? '#{i18n.getText('KAF009_9')}' : '#{i18n.getText('KAF009_10')}'"></span>
 			</div>
 		</div>
 		<div class="valign-center control-group">
@@ -86,7 +86,7 @@
 					data-bind="ntsDatePicker: {name: '#{i18n.getText('KAF005_33')}',required:true, value: appDate, dateFormat: 'YYYY/MM/DD'}, acceptJapaneseCalendar: true"></div>
 			</div>
 			<div data-bind="if: !screenModeNew()" style="display: inline-block;">
-				<span class="label fix-margin-left" data-bind="text: appDate"></span>
+				<span class="label fix-margin-left-kaf005" data-bind="text: appDate"></span>
 			</div>
 		</div>
 		<div data-bind="if: displayCaculationTime">
