--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -52,7 +52,7 @@
 			<!--A3_1 申請者-->
 			<div class="lblTitle cm-column" data-bind="ntsFormLabel: {}">#{i18n.getText('KAF010_29')}</div>
 			<!--A3_2 申請者表示氏名-->
-			<label class="lblEmployeeName fix-margin-left" data-bind="text : employeeName"></label>
+			<label class="lblEmployeeName fix-margin-left-emp-kaf010" data-bind="text : employeeName"></label>
 		</div>
 		<div class="valign-center control-group"
 			data-bind="if: displayPrePostFlg">
@@ -74,7 +74,7 @@
 				</div>
 			</div>
 			<div data-bind="if: !screenModeNew()" style="display: inline-block;">
-				<span class="label fix-margin-left" data-bind="text: prePostSelected()==0 ? '#{i18n.getText('KAF009_9')}' : '#{i18n.getText('KAF009_10')}'"></span>
+				<span class="label fix-margin-left-kaf010" data-bind="text: prePostSelected()==0 ? '#{i18n.getText('KAF009_9')}' : '#{i18n.getText('KAF009_10')}'"></span>
 			</div>
 		</div>
 		<div class="valign-center control-group">
@@ -86,7 +86,7 @@
 					data-bind="ntsDatePicker: {name: '#{i18n.getText('KAF010_33')}',required:true, value: appDate, dateFormat: 'YYYY/MM/DD'}, acceptJapaneseCalendar: true"></div>
 			</div>
 			<div data-bind="if: !screenModeNew()" style="display: inline-block;">
-				<span class="label fix-margin-left" data-bind="text: appDate"></span>
+				<span class="label fix-margin-left-kaf010" data-bind="text: appDate"></span>
 			</div>
 		</div>
 		<div data-bind="if: displayCaculationTime">
