--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/011/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/011/b/index.xhtml
@@ -8,11 +8,11 @@
 	<ui:composition template="/master/base.xhtml">
 		<ui:define name="htmlHead">
 			<com:scriptfile set="IGNITE" />
-			<!-- kaf011 a-->
-			<com:stylefile path="kaf011.a.style.css" />
-			<com:scriptfile path="kaf011.a.service.js" />
-			<com:scriptfile path="kaf011.a.vm.js" />
-			<com:scriptfile path="kaf011.a.start.js" />
+			<!-- kaf011 b -->
+			<com:stylefile path="kaf011.b.style.css" />
+			<com:scriptfile path="kaf011.b.service.js" />
+			<com:scriptfile path="kaf011.b.vm.js" />
+			<com:scriptfile path="kaf011.b.start.js" />
 			<!-- kaf000 -->
 			<com:stylefile path="../../000/a/kaf000.a.main.css" />
 			<com:scriptfile path="../../000/shr/kaf000.shr.vm.js" />
