update UI KAL001

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/kal001.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/kal001.a.style.css
@@ -12,3 +12,9 @@
 .control-group{
 	margin-top: 100px;
 }
+.check_column{
+	text-align: center !important;
+}
+.periodTime{
+	padding-left: 15px !important;
+}
