--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/index.xhtml
@@ -65,13 +65,13 @@
 									<td>
 										<table id="fixed-table">
 											<colgroup>
-												<col width="100px"/>
+												<col width="50px"/>
 												<col width="200px"/>
 												<col width="300px"/>
 											</colgroup>
 											<thead>
 												<tr>
-													<th class="ui-widget-header" >Lam Leader</th>
+													<th class="ui-widget-header check_column" data-bind="click: clickCheckAll" ><div data-bind="ntsCheckBox: {checked: checkAll}"></div></th>
 													<th class="ui-widget-header" >#{i18n.getText('KAL001_6')}</th>
 													<th class="ui-widget-header" >#{i18n.getText('KAL001_7')}</th>
 
@@ -80,9 +80,9 @@
 											<tbody>
 												<com:ko-foreach bind="periodByCategory">
 													<tr>
-														<td><div data-bind="ntsCheckBox: {checked: checkBox}"></div></td>
+														<td  class ="check_column"  ><div data-bind="ntsCheckBox: {checked: checkBox}"></div></td>
 														<td data-bind ="text: categoryName "></td>
-														<td><div data-bind="ntsDatePicker: {value: startDate, dateFormat: 'YYYY/MM/DD'}"></div> <span> ~ </span>
+														<td class ='periodTime'><div data-bind="ntsDatePicker: {value: startDate, dateFormat: 'YYYY/MM/DD'}"></div> <span>　～　 </span>
 															<div data-bind="ntsDatePicker: {value: endDate, dateFormat: 'YYYY/MM/DD'}"></div>
 														</td>
 													</tr>
