--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index1.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index1.xhtml
@@ -30,29 +30,29 @@
 									</com:ko>
 									<td data-bind="text: '承認者'+$data.frameOrder()" style="width: 111px; text-align: left; padding-left: 5px;" class="bg-green"></td>
 									<td style="width: 230px; text-align: left; padding-left: 5px;">
-										<div style="display: inline-block;" data-bind="if: $data.approvalAtr() !='未承認'">
-											<div style="display: inline-block;" data-bind="if: $data.approverID">
-												<label data-bind="text: $data.approverID"></label>
+										<div style="display: inline-block;" data-bind="if: $data.approvalAtrName() !='未承認'">
+											<div style="display: inline-block;" data-bind="if: $data.approverName">
+												<label data-bind="text: $data.approverName"></label>
 											</div>
-											<div style="display: inline-block;" data-bind="if: !$data.approverID()">
-												<label data-bind="text: $data.representerID"></label>
+											<div style="display: inline-block;" data-bind="if: $data.representerName().length > 0">
+												<label data-bind="text: $data.representerName"></label>
 											</div>
 										</div>
-										<div style="display: inline-block;" data-bind="if: $data.approvalAtr() =='未承認'">
+										<div style="display: inline-block;" data-bind="if: $data.approvalAtrName() =='未承認'">
 											<div style="display: inline-block;" data-bind="foreach: $data.listApprover">
 												<com:ko bind="$index() != 0" tag="if">
 													<label>,</label>
 												</com:ko>
 												<div style="display: inline-block;">
-													<label data-bind="text: $data.approver()"></label>
-													<div style="display: inline-block;" data-bind="if: $data.representer().length > 0">
-														<label data-bind="text: '(' + $data.representer() + ')'"></label>
+													<label data-bind="text: $data.approverName()"></label>
+													<div style="display: inline-block;" data-bind="if: $data.representerName().length > 0">
+														<label data-bind="text: '(' + $data.representerName() + ')'"></label>
 													</div>
 												</div>	
 											</div>
 										</div>
 									</td>
-									<td style="width: 111px;" data-bind="text: $data.approvalAtr"></td>
+									<td style="width: 111px;" data-bind="text: $data.approvalAtrName"></td>
 									<td style="width: 111px; text-align: left; padding-left: 5px;" data-bind="text: $data.approvalReason"></td>
 								</tr>
 							</com:ko>
