--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/cps003.a.style.css
@@ -1,3 +1,34 @@
 .data-layout {
 	padding-left: 90px;
 }
+
+.data-layout .form-groups,
+.data-layout .layout-multi-control {
+	position: relative;
+}
+
+.data-layout .form-group {
+	margin-bottom: 15px;
+	z-index: 9999;
+}
+
+.data-layout .form-group.margin-left {
+	margin-left: 35px;
+}
+
+.data-layout .form-group:not(.margin-left) .fixed-width {
+	width: 125px;
+}
+
+.data-layout .form-group .ntsRadioBox {
+	margin-right: 20px;
+}
+
+.data-layout .form-groups {
+	z-index: 9;
+}
+
+.data-layout .layout-multi-control {
+	z-index: 0;
+	margin-top: -60px;
+}
