--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
@@ -30,31 +30,36 @@
 			<div id="content-area">
 				<div class="control-group table" style ="margin-top: 20px; margin-left: 20px">
 					<!-- A3 -->
-					<div class = "cell" data-bind = "visible: mode()==1">
-						<div data-bind="with: approvalCount">
-							<!-- A3_1 -->
-							<div data-bind="text: unApprovalNumber"></div>
-							<!-- A3_2 -->
-							<div data-bind="text: approvalNumber"></div>
-							<!-- A3_3 -->
-							<div data-bind="text: approvalAgentNumber"></div>
-							<!-- A3_4 -->
-							<div data-bind="text: cancelNumber"></div>
-							<!-- A3_5 -->
-							<div data-bind="text: remandNumner"></div>
-							<!-- A3_6 -->
-							<div data-bind="text: denialNumber"></div>
+					<div class = "cell" style = "width: 150px;">
+						<div data-bind = "visible: mode()==1">
+							<div data-bind="with: approvalCount">
+								<!-- A3_1 -->
+								<div data-bind="text: unApprovalNumber"></div>
+								<!-- A3_2 -->
+								<div data-bind="text: approvalNumber"></div>
+								<!-- A3_3 -->
+								<div data-bind="text: approvalAgentNumber"></div>
+								<!-- A3_4 -->
+								<div data-bind="text: cancelNumber"></div>
+								<!-- A3_5 -->
+								<div data-bind="text: remandNumner"></div>
+								<!-- A3_6 -->
+								<div data-bind="text: denialNumber"></div>
+							</div>
 						</div>
+						
 					</div>
 					
 					<div class = "cell" style ="padding-left: 20px">
 						<!-- A2: Switch button -->
-						<div data-bind="ntsSwitchButton: {
-							options: roundingRules,
-							optionsValue: 'code',
-							optionsText: 'name',
-							value: selectedRuleCode,
-							enable: true }"></div>
+						<div data-bind = "visible: mode()==1">
+							<div data-bind="ntsSwitchButton: {
+								options: roundingRules,
+								optionsValue: 'code',
+								optionsText: 'name',
+								value: selectedRuleCode,
+								enable: true }"></div>
+						</div>
 						<!-- A4_1 -->
 						<div>
 							<table>
@@ -62,7 +67,7 @@
 									<col width="100px" />
 									<col width="*" />
 								</colgroup>
-								<tr>
+								<tr data-bind = "visible: mode()==1">
 									<td><div>#{i18n.getText('CMM045_19')}</div></td>
 									<td>
 										<!-- A4_1 -->
