update UI  KAL001.A

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/kal001.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/kal001.a.style.css
@@ -10,11 +10,15 @@
 	padding-left: 15px;
 }
 .control-group{
-	margin-top: 100px;
+	margin-top: 70px;
 }
 .check_column{
 	text-align: center !important;
 }
 .periodTime{
 	padding-left: 15px !important;
+}
+
+.nts-datepicker-wrapper .ntsDatepicker.yearmonth-picker{
+	width: 85px;
 }
