--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/index.xhtml
@@ -66,7 +66,7 @@
 										<table id="fixed-table">
 											<colgroup>
 												<col width="50px"/>
-												<col width="200px"/>
+												<col width="120px"/>
 												<col width="300px"/>
 											</colgroup>
 											<thead>
@@ -80,10 +80,19 @@
 											<tbody>
 												<com:ko-foreach bind="periodByCategory">
 													<tr>
-														<td  class ="check_column"  ><div data-bind="ntsCheckBox: {checked: checkBox}"></div></td>
+														<td  class ="check_column"  data-bind="click: setClick"><div data-bind="ntsCheckBox: {checked: checkBox}"></div></td>
 														<td data-bind ="text: categoryName "></td>
-														<td class ='periodTime'><div data-bind="ntsDatePicker: {value: startDate, dateFormat: 'YYYY/MM/DD'}"></div> <span>　～　 </span>
-															<div data-bind="ntsDatePicker: {value: endDate, dateFormat: 'YYYY/MM/DD'}"></div>
+														<td class ='periodTime'>
+															<div data-bind="visible: category==2 || category==5">
+																<div data-bind="ntsDatePicker: {value: startDate, dateFormat: 'YYYY/MM/DD'}"></div> 
+																<span>　～　 </span>
+																<div data-bind="ntsDatePicker: {value: endDate, dateFormat: 'YYYY/MM/DD'}"></div>
+															</div>
+															<div data-bind="visible: category==7">
+																<div data-bind="ntsDatePicker: {value: startMonth, dateFormat: 'yearmonth'}"></div>
+																<span>　～　 </span>
+																<div data-bind="ntsDatePicker: {value: endMonth, dateFormat: 'yearmonth'}"></div>
+															</div>
 														</td>
 													</tr>
 												</com:ko-foreach>
